--- a/css/style.css
+++ b/css/style.css
@@ -1,126 +1,96 @@
-body {
-
-    margin: 0;
-    padding: 0cap;
-    text-decoration: none;
-    list-style-type: none;
-    background-color: rgb(247, 247, 232);
+#color {
+  background-color: rgb(245, 245, 234);
 }
-
-
-body header {
-    background-image: url(../images/back.jpeg);
-    background-size: contain;
-    border-style: double;
-    border-color: coral;
-    margin: 1PX;
-    border: 20PX;
-    width: 100VW;
-    
-
-}
-
-#color{
-    background-color: rgb(245, 245, 234);
-}
-
 
 li a {
-    color: red;
+  color: red;
 }
 
-main h1 {
-    color: salmon;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-p {
-    text-align: center;
-}
-
-main {
-    border-style: double;
-    border-color: coral;
-    margin: 40px;
-}
-
-footer {
-    display: flex;
-    border-style: double;
-    border-color: coral;
-    margin: 30px;
-}
-
-}
-
-#h11 {
-
-    color: brown;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 300;
-    font-style: oblique;
-    text-align: center;
-}
-
-#parrafo {
-    font-family: Arial, Helvetica, sans-serif;
-    color: sienna;
-    
-}
-
-
-header nav ul{
-    display: flex;
-    
+header nav ul {
+  display: flex;
   justify-content: space-around;
 }
 
-
-
-div{
-    border-style: double;
+body {
+  margin: 0;
+  padding: 0cap;
+  text-decoration: none;
+  list-style-type: none;
+  background-color: rgb(247, 247, 232);
 }
 
-
-.container{
-    display: grid;
-   
-    grid-template-columns:auto auto
-    auto auto;
-
-    grid-gap: 20px;
-
-    grid-template-areas: 
-    "foto-larga"
-    "foto-larga";
-    gap: 10px;
-
-    justify-content: space-around;
+main {
+  border-style: double;
+  border-color: coral;
+  margin: 40px;
 }
 
-.ca7{
-    display: grid;
- grid-template-columns: 200px;
- grid-area: foto-larga;
-
+div {
+  border-style: double;
 }
 
-@media screen and (max-width:768px) {
-    .container{
-        grid-template-columns: auto;
-    }
-    
+footer {
+  display: flex;
+  border-style: double;
+  border-color: coral;
+  margin: 30px;
 }
-    
-.funcion{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
 
-
-
+.container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 20px;
+  grid-template-areas: "foto-larga" "foto-larga";
+  gap: 10px;
+  justify-content: space-around;
 }
-@media screen and (max-width:768px) {
-    .funcion {
-        grid-template-columns: auto;
-    }
 
+@media screen and (max-width: 768px) {
+  .container {
+    grid-template-columns: auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .funcion {
+    grid-template-columns: auto;
+  }
+}
+#h11 {
+  color: brown;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 300;
+  font-style: oblique;
+  text-align: center;
+}
+
+body header {
+  background-image: url(../images/back.jpeg);
+  background-size: contain;
+  border-style: double;
+  border-color: coral;
+  margin: 1PX;
+  border: 20PX;
+  width: 100VW;
+}
+
+main h1 {
+  color: salmon;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+p {
+  text-align: center;
+}
+
+#parrafo {
+  font-family: Arial, Helvetica, sans-serif;
+  color: sienna;
+}
+
+.ca7 {
+  display: grid;
+  grid-template-columns: 200px;
+  grid-area: foto-larga;
+}
+
+/*# sourceMappingURL=style.css.map */
